--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-  <script defer="defer" src="/static/js/main.61da3a81.js"></script>
-  <link href="/static/css/main.e0d6d320.css" rel="stylesheet" />
+  <script defer="defer" src="/bit-test/static/js/main.61da3a81.js"></script>
+  <link href="/bit-test/static/css/main.e0d6d320.css" rel="stylesheet" />
 </head>
 <div id="root"></div>
